--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -87,10 +87,10 @@
 
         <section class="sobre-nosotros">
             <h3>SOBRE NOSOTROS</h3>
-            <p> AlojaMascotas fue fundada en 2003 en Argentina por un equipo multidisciplinario, tiene como misión el cuidado responsable de las mascotas.
-              Ayudamos a la gente a que pueda elegir la guardería que mejor se adapte a las preferencias de cada cliente. Ofrecemos un abanico de posibilidades para que tu amigo de cuatro patas cuente con el cuidado que necesita.
-               Con unos pocos clics vas a poder reservar de manera inmediata y segura el alojamiento que elijas</p>
-            <p>En AlojaMascotas creemos que el cuidado de tus mascotas es primordial y queremos ayudar a que encuentres su lugar de la manera más simple y confiable!</p>
+            <p>AlojaMascotas fue fundada en 2003 en Argentina por un equipo multidisciplinario, tiene como misión el cuidado responsable de las mascotas.
+              Ayudamos a la gente a que pueda elegir la guardería que mejor se adapte a las preferencias de cada cliente. Ofrecemos un abanico de posibilidades para que tu amigo de cuatro patas cuente con el cuidado que necesita.</p>
+              <p>En AlojaMascotas creemos que el cuidado de tus mascotas es primordial y queremos ayudar a que encuentres su lugar de la manera más simple y confiable.
+                Con tan solo unos pocos clics vas a poder reservar de manera inmediata y segura el alojamiento que elijas!</p>
               </section>
 
     </main>
