validacion front formulario modificación  focus de form

--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -29,6 +29,7 @@
                             <div>
                                 <label>Nombre:</label>
                                 <input type="text" name="first_name" id="first_name">
+                                <!-- agrego id para identificacion front -->
                             </div>
 
                             <div>
