--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -21,7 +21,7 @@
 
                 <div class="contenedor-registro">
 
-
+                    <ul class="errores"></ul>
                     <form action="/productos/crear-producto" method="POST" enctype="multipart/form-data">
 
 
@@ -77,7 +77,7 @@
             <!-- Footer -->
             <%- include('partials/footer') %>
 
-
+            <script src="/js/crear-producto.js"></script>
     </body>
 
 </html>
