--- a/src/views/inicia-sesion.ejs
+++ b/src/views/inicia-sesion.ejs
@@ -22,7 +22,7 @@
 
                     <div class="contenedor-iniciar-sesion">
                         <ul class="errores"></ul>
-                        <form action="/users/inicia-sesion" method="POST" class="form-login">
+                        <form action="/users/inicia-sesion" method="POST" class="formLogin">
                             <div>
                                 <label class="label-email">CORREO ELECTRONICO:</label>
                                 <input class="input-datos" type="email" name="email" id="email">
