--- a/src/views/crear-producto.ejs
+++ b/src/views/crear-producto.ejs
@@ -77,7 +77,7 @@
             <!-- Footer -->
             <%- include('partials/footer') %>
 
-            <script src="/js/crear-producto.js"></script>
+            <script src="/js/crearProducto.js"></script>
     </body>
 
 </html>
