--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -17,6 +17,10 @@
 
             <main>
 
+                <div class="boton-volver-home">
+                    <a href="/"><i class="far fa-arrow-alt-circle-left"></i> VOLVER</a>
+                </div>
+
                 <h1 class="titulo-productos">NUESTRAS GUARDERIAS</h1>
 
                 <section class="articulos">
